--- a/templates/chat.html
+++ b/templates/chat.html
@@ -42,7 +42,10 @@
                         var msg = JSON.parse(e.data);
                         messages.append(
                             $("<li>").append(
-                                $("<strong>").text(msg.Name + ": "),
+                                $("<img>").attr("title", msg.Name).css({
+                                    width:50,
+                                    verticalAlign:"middle"
+                                }).attr("src", msg.AvatarURL),
                                 $("<span>").text(msg.Message)
                             )
                         );
